--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "nodebb-theme-bubun",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Bubun Das",
+  "version": "1.0.01",
+  "description": "Nodebb theme for my personal use",
+  "main": "theme.less",
+  "keywords": [
+
+  ],
   "license": "MIT"
 }
